fix: width overflow on webkit browsers

--- a/src/blocks/bestsellers/bestsellers.css
+++ b/src/blocks/bestsellers/bestsellers.css
@@ -3,8 +3,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  max-width: 100vw;
-  width: 100wv;
+  max-width: 100%;
   z-index: 0;
   position: relative;
 }
