--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -4,5 +4,5 @@
   justify-content: center;
   background-color: var(--black);
   margin-top: auto;
-  width: 100vw;
+  width: 100%;
 }
