--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -7,8 +7,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 100%;
-  width: 100vw;
+  width: 100%;
 }
 
 :root {
@@ -27,11 +26,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: auto;
+  margin: 0;
 }
 
 #root {
-  width: 100vw;
+  max-width: 100%;
+  width: 100%;
   min-height: 100vh;
 
   font-family: "Neue Helvetica", sans-serif;
