--- a/src/blocks/section-title/section-title.css
+++ b/src/blocks/section-title/section-title.css
@@ -11,7 +11,7 @@
 @media screen and (max-width: 720px) {
   .section-title {
     margin: 30px auto;
-    max-width: 100vw;
+    max-width: 100%;
     grid-column: span 2;
     text-align: center;
   }
