--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -1,5 +1,5 @@
 .product {
-  margin: 160px 60px 0;
+  margin: 160px 60px 60px;
   box-sizing: border-box;
   max-width: 100%;
   display: grid;
